Custom--app/main/default/objects/Tenant_App__c/fields/HOA_App_Comments__c.field-meta.xml
<CustomField>
    <fullName>HOA_App_Comments__c</fullName>
    <label>HOA App Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>