Custom--app/main/default/objects/Tenant_App__c/fields/HOA_App_Received_date__c.field-meta.xml
<CustomField>
    <fullName>HOA_App_Received_date__c</fullName>
    <label>HOA App Approval Recv’d Date</label>
    <type>DateTime</type>
</CustomField>