Custom--app/main/default/objects/Tenant_App__c/fields/HOA_App_Status__c.field-meta.xml
<CustomField>
    <fullName>HOA_App_Status__c</fullName>
    <inlineHelpText>If this property has an HOA that requires an application be submitted, please use this field to track status.</inlineHelpText>
    <label>HOA App Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent/Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>