Custom--app/main/default/objects/Tenant_App__c/fields/HOA_App_Submitted_to_HOA__c.field-meta.xml
<CustomField>
    <fullName>HOA_App_Submitted_to_HOA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOA App Submitted to HOA</label>
    <type>Checkbox</type>
</CustomField>