Custom--app/main/default/objects/Tenant_App__c/fields/HOA_App_Submitted_to_HOA_Date__c.field-meta.xml
<CustomField>
    <fullName>HOA_App_Submitted_to_HOA_Date__c</fullName>
    <label>HOA App Submitted to HOA Date</label>
    <type>DateTime</type>
</CustomField>