Custom--app/main/default/objects/Tenant_App__c/fields/HOA_Tenant_App__c.field-meta.xml
<CustomField>
    <fullName>HOA_Tenant_App__c</fullName>
    <inlineHelpText>If the HOA requires an application or copy of the lease, please indicate if it was sent or N/A.</inlineHelpText>
    <label>HOA Tenant App</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>