Custom--app/main/default/objects/Tenant_App__c/fields/Hold_Agreement_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Hold_Agreement_Rec_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Agreement Rec'd</label>
    <type>Checkbox</type>
</CustomField>