Custom--app/main/default/objects/Tenant_App__c/fields/Hold_Agreement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Hold_Agreement_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Agreement Sent</label>
    <type>Checkbox</type>
</CustomField>