Custom--app/main/default/objects/Tenant_App__c/fields/Hold_Fee_Charged_in_Yardi__c.field-meta.xml
<CustomField>
    <fullName>Hold_Fee_Charged_in_Yardi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Fee Charged in Yardi</label>
    <type>Checkbox</type>
</CustomField>