Custom--app/main/default/objects/Tenant_App__c/fields/Hold_Fee_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Hold_Fee_Rec_d__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Checked It Changes Application Status :-
Approved/Hold Fee Rec'd  if Hold Agreement Rec'd = null
Approved/Hold Fee Rec'd/Preleased if Hold Agreemnt Rec'd not null</description>
    <label>Hold Fee Rec'd</label>
    <type>Checkbox</type>
</CustomField>