Custom--app/main/default/objects/Tenant_App__c/fields/Holding_Fee_Paid_date__c.field-meta.xml
<CustomField>
    <fullName>Holding_Fee_Paid_date__c</fullName>
    <label>DateTime Hold Fee Charged in Yardi</label>
    <type>DateTime</type>
</CustomField>