Custom--app/main/default/objects/Tenant_App__c/fields/Holding_Form_Received_date__c.field-meta.xml
<CustomField>
    <fullName>Holding_Form_Received_date__c</fullName>
    <label>DateTime Hold Agreement Rec'd</label>
    <type>DateTime</type>
</CustomField>