Custom--app/main/default/objects/Tenant_App__c/fields/Housing_Authority_Approved__c.field-meta.xml
<CustomField>
    <fullName>Housing_Authority_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housing Authority Approved</label>
    <type>Checkbox</type>
</CustomField>