Custom--app/main/default/objects/Tenant_App__c/fields/Housing_Authority_Inspection_Completed__c.field-meta.xml
<CustomField>
    <fullName>Housing_Authority_Inspection_Completed__c</fullName>
    <label>Housing Authority Inspection Completed</label>
    <type>Date</type>
</CustomField>