Custom--app/main/default/objects/Tenant_App__c/fields/Housing_Authority_Inspection_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Housing_Authority_Inspection_Scheduled__c</fullName>
    <label>Housing Authority Inspection Scheduled</label>
    <type>Date</type>
</CustomField>