Custom--app/main/default/objects/Tenant_App__c/fields/IH_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>IH_Lead_Source__c</fullName>
    <label>IH Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>