Custom--app/main/default/objects/Tenant_App__c/fields/Income_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Income_Verification_Comments__c</fullName>
    <label>Income Verification Source/Document(s)</label>
    <type>TextArea</type>
</CustomField>