Custom--app/main/default/objects/Tenant_App__c/fields/Initial_Screening_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Initial_Screening_Recommendation__c</fullName>
    <label>Initial Screening Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved with Conditions</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>