Custom--app/main/default/objects/Tenant_App__c/fields/LA_Co_Broker_External_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>LA_Co_Broker_External_Check_Date__c</fullName>
    <label>zzz_LA(Co-Broker) Ext- Check Date</label>
    <type>Date</type>
</CustomField>