Custom--app/main/default/objects/Tenant_App__c/fields/LA_Co_Broker_External_Invoice_Rec_d_Date__c.field-meta.xml
<CustomField>
    <fullName>LA_Co_Broker_External_Invoice_Rec_d_Date__c</fullName>
    <label>zzz_LA(Co-Broker)Ext- Invoice Rec'd Date</label>
    <type>Date</type>
</CustomField>