Custom--app/main/default/objects/Tenant_App__c/fields/LA_Entered_App_Received__c.field-meta.xml
<CustomField>
    <fullName>LA_Entered_App_Received__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered this App Received date should automatically populate</description>
    <label>LA Entered App Received</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking5</relationshipName>
    <type>Lookup</type>
</CustomField>