Custom--app/main/default/objects/Tenant_App__c/fields/LA_Entered_Screening_Recommendation_Rec__c.field-meta.xml
<CustomField>
    <fullName>LA_Entered_Screening_Recommendation_Rec__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered this date should automatically populate</description>
    <label>LA Entered Screening Recommendation Rec'</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking6</relationshipName>
    <type>Lookup</type>
</CustomField>