Custom--app/main/default/objects/Tenant_App__c/fields/LA_Entered_Signed_Lease_Rec_vd__c.field-meta.xml
<CustomField>
    <fullName>LA_Entered_Signed_Lease_Rec_vd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered 'Signed Lease Rec'vd' should automatically populate</description>
    <label>LA Entered Signed Lease Rec'vd</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackingarXW</relationshipName>
    <type>Lookup</type>
</CustomField>