Custom--app/main/default/objects/Tenant_App__c/fields/LA_Entered_VOI_Completed__c.field-meta.xml
<CustomField>
    <fullName>LA_Entered_VOI_Completed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered this date should automatically populate</description>
    <label>LA Entered VOI Completed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking7</relationshipName>
    <type>Lookup</type>
</CustomField>