Custom--app/main/default/objects/Tenant_App__c/fields/LA_Sent_Lease_Agreement__c.field-meta.xml
<CustomField>
    <fullName>LA_Sent_Lease_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered 'Lease Prepared/Sent' should automatically populate</description>
    <label>LA Sent Lease Agreement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking8</relationshipName>
    <type>Lookup</type>
</CustomField>