Custom--app/main/default/objects/Tenant_App__c/fields/LA_Sent_Revised_Lease__c.field-meta.xml
<CustomField>
    <fullName>LA_Sent_Revised_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that entered 'Revised Lease Sent' should automatically populate</description>
    <label>LA Sent Revised Lease</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking9</relationshipName>
    <type>Lookup</type>
</CustomField>