Custom--app/main/default/objects/Tenant_App__c/fields/LA_Updated_Additional_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated_Additional_Security_Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LA Updated Additional Security Deposit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackingtPCD</relationshipName>
    <type>Lookup</type>
</CustomField>