Custom--app/main/default/objects/Tenant_App__c/fields/LA_Updated_Hold_Agreement_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated_Hold_Agreement_Rec_d__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LA Updated Hold Agreement Rec'd</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackingtPDp</relationshipName>
    <type>Lookup</type>
</CustomField>