Custom--app/main/default/objects/Tenant_App__c/fields/LA_Updated_Hold_Fee_Charged_in_Yardi__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated_Hold_Fee_Charged_in_Yardi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LA Updated Hold Fee Charged in Yardi</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackingtPIV</relationshipName>
    <type>Lookup</type>
</CustomField>