Custom--app/main/default/objects/Tenant_App__c/fields/LA_Updated_Hold_Fee_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>LA_Updated_Hold_Fee_Rec_d__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LA Updated  Hold Fee Rec'd</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackingtP4x</relationshipName>
    <type>Lookup</type>
</CustomField>