Custom--app/main/default/objects/Tenant_App__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Incoming_Calls__c</referenceTo>
    <relationshipLabel>Application Tracking</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>