Custom--app/main/default/objects/Tenant_App__c/fields/Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Lead_Channel__c</fullName>
    <label>Lead Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>