Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Approved_by_Housing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Lease_Approved_by_Housing_Authority__c</fullName>
    <label>File Approved by Housing Authority Date</label>
    <type>DateTime</type>
</CustomField>