Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Docs_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Docs_Complete_Date__c</fullName>
    <label>Lease Docs Complete Date</label>
    <type>Date</type>
</CustomField>