Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Executed__c.field-meta.xml
<CustomField>
    <fullName>Lease_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed Lease Recv'd</label>
    <type>Checkbox</type>
</CustomField>