Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Executed_Date__c</fullName>
    <label>Lease Executed Date</label>
    <type>DateTime</type>
</CustomField>