Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Generation_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Generation_Type__c</fullName>
    <label>Lease Generation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blank Lease</fullName>
            </value>
            <value>
                <fullName>Pre-Filled Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>