Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Prep_to_Sig_Lease_Recv_d_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Lease_Prep_to_Sig_Lease_Recv_d_Hrs__c</fullName>
    <formula>(Signed_Lease_Rec_vd_Date__c - Lease_Prepared_Sent_Date__c )</formula>
    <label>Lease Prep. to Sig. Lease Recv'd (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>