Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Prepared_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Prepared_Sent_Date__c</fullName>
    <label>Lease Prepared/Sent Date</label>
    <type>DateTime</type>
</CustomField>