Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Section_1_12_Monies_Received__c.field-meta.xml
<CustomField>
    <fullName>Lease_Section_1_12_Monies_Received__c</fullName>
    <label>Lease Section 1.12 Total Funds Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>