Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Section_1_12_Total_Funds_Recd_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Section_1_12_Total_Funds_Recd_Date__c</fullName>
    <label>DateTime LSec. 1.12 Total Funds Recd</label>
    <type>DateTime</type>
</CustomField>