Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Start_Date_Agent_Verified__c.field-meta.xml
<CustomField>
    <fullName>Lease_Start_Date_Agent_Verified__c</fullName>
    <label>Lease Start Date (Agent Verified)</label>
    <type>Date</type>
</CustomField>