Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Submitted_to_Housing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Lease_Submitted_to_Housing_Authority__c</fullName>
    <label>File Submitted to Housing Authority</label>
    <type>Date</type>
</CustomField>