Custom--app/main/default/objects/Tenant_App__c/fields/Lease_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Uploaded_Date__c</fullName>
    <label>Lease Uploaded Date</label>
    <type>DateTime</type>
</CustomField>