Custom--app/main/default/objects/Tenant_App__c/fields/Leasing_Agent_Co_Broker_Ext_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Agent_Co_Broker_Ext_Vendor_ID__c</fullName>
    <label>Leasing Agent(Co-Broker) Ext- Vendor ID</label>
    <length>155</length>
    <type>Text</type>
</CustomField>