Custom--app/main/default/objects/Tenant_App__c/fields/Leasing_Agent_Co_broker_External_Email__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Agent_Co_broker_External_Email__c</fullName>
    <label>Leasing Agent(Co-broker)–External–Email</label>
    <type>Email</type>
</CustomField>