Custom--app/main/default/objects/Tenant_App__c/fields/Leasing_Agent_Co_Broker_IH_VendorID__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Agent_Co_Broker_IH_VendorID__c</fullName>
    <label>Leasing Agent(Co-Broker) IH- Vendor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>