Custom--app/main/default/objects/Tenant_App__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipName>Tenant_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>