Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent__c</fullName>
    <formula>IF( ISBLANK(Listing_Agent_Name_Text__c) ,Listing__r.Listing_Agent__r.Full_Name__c, MID(Listing_Agent_Name_Text__c, FIND("-",Listing_Agent_Name_Text__c )+1 ,20 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent</label>
    <type>Text</type>
</CustomField>