Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Check_Date__c</fullName>
    <label>zzz_Listing Agent Check Date</label>
    <type>Date</type>
</CustomField>