Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Co_Broker_IH_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Co_Broker_IH_Check_Date__c</fullName>
    <label>Leasing Agent(Co-Broker) IH- Check Date</label>
    <type>Date</type>
</CustomField>