Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_E_mail_0__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_E_mail_0__c</fullName>
    <formula>Listing__r.Listing_Agent_Email__c</formula>
    <label>Listing Agent E-mail</label>
    <type>Text</type>
</CustomField>