Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_E_mail_1__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_E_mail_1__c</fullName>
    <label>Listing Agent E-mail</label>
    <type>Email</type>
</CustomField>