Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Invoice_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Invoice_Recv_d_Date__c</fullName>
    <label>zzz_Listing Agent Invoice Recv'd Date</label>
    <type>Date</type>
</CustomField>