Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Name_Text__c</fullName>
    <label>Listing Agent Name Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>