Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Phone__c</fullName>
    <formula>Listing__r.Listing_Agent_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Agent Phone</label>
    <type>Text</type>
</CustomField>