Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Temp_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Temp_Text_Field__c</fullName>
    <label>Listing Agent - Temp Text Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>