Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Agent_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Agent_Vendor_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzListing Agent Vendor ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_TrackinguH1J</relationshipName>
    <type>Lookup</type>
</CustomField>