Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Listing_Record_ID__c</fullName>
    <formula>Listing__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Record ID</label>
    <type>Text</type>
</CustomField>