Custom--app/main/default/objects/Tenant_App__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <formula>text( Listing__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Status</label>
    <type>Text</type>
</CustomField>