Custom--app/main/default/objects/Tenant_App__c/fields/Method_of_Notification__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Notification__c</fullName>
    <label>Method of Notification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone - Voicemail</fullName>
            </value>
            <value>
                <fullName>Phone - Live Conversation</fullName>
            </value>
            <value>
                <fullName>Snail Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>