Custom--app/main/default/objects/Tenant_App__c/fields/MIMO_Rec_vd_Date__c.field-meta.xml
<CustomField>
    <fullName>MIMO_Rec_vd_Date__c</fullName>
    <label>MIMO Rec'vd Date</label>
    <type>Date</type>
</CustomField>