Custom--app/main/default/objects/Tenant_App__c/fields/Min_Monthly_Income_Required_Divisor__c.field-meta.xml
<CustomField>
    <fullName>Min_Monthly_Income_Required_Divisor__c</fullName>
    <formula>Min_Monthly_Income_Required__c  /  Listing__r.Market_Rent__c</formula>
    <label>Min. Monthly Income Required Divisor</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>