Custom--app/main/default/objects/Tenant_App__c/fields/Move_In_Comments__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Comments__c</fullName>
    <label>Move-In Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>