Custom--app/main/default/objects/Tenant_App__c/fields/Move_In_Confirmation_to_Agent__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Confirmation_to_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Move-In Confirmation to Agent(s)</label>
    <type>Checkbox</type>
</CustomField>