Custom--app/main/default/objects/Tenant_App__c/fields/Move_in_Date_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Move_in_Date_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Move-In Date Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Tracking2</relationshipName>
    <type>Lookup</type>
</CustomField>