Custom--app/main/default/objects/Tenant_App__c/fields/Move_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Method__c</fullName>
    <label>Move-In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lockbox</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>