Custom--app/main/default/objects/Tenant_App__c/fields/Move_in_Rent_Amount_Required__c.field-meta.xml
<CustomField>
    <fullName>Move_in_Rent_Amount_Required__c</fullName>
    <label>Lease Section 1.12 Total Funds Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>