Custom--app/main/default/objects/Tenant_App__c/fields/Move_In_Time_Move_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Time_Move_In_Process__c</fullName>
    <inlineHelpText>Used for Move In Time during move in Process</inlineHelpText>
    <label>Move In Time (Move In Process)</label>
    <type>DateTime</type>
</CustomField>