Custom--app/main/default/objects/Tenant_App__c/fields/Opted_in_for_PointCentral_Smart_Home__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_for_PointCentral_Smart_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted in for PointCentral Smart Home</label>
    <type>Checkbox</type>
</CustomField>