Custom--app/main/default/objects/Tenant_App__c/fields/Orientation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Comments__c</fullName>
    <label>Orientation Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>