Custom--app/main/default/objects/Tenant_App__c/fields/Orientation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Complete</label>
    <type>Checkbox</type>
</CustomField>