Custom--app/main/default/objects/Tenant_App__c/fields/Orientation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Date_Time__c</fullName>
    <inlineHelpText>Please indicate the date/time that has been scheduled for the resident orientation.</inlineHelpText>
    <label>Orientation Date/Time</label>
    <type>DateTime</type>
</CustomField>