Custom--app/main/default/objects/Tenant_App__c/fields/Orientation_Scheduling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Scheduling_Notes__c</fullName>
    <label>Orientation Scheduling Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>