Custom--app/main/default/objects/Tenant_App__c/fields/Payment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Comments__c</fullName>
    <label>Deposit &amp; Money Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>