Custom--app/main/default/objects/Tenant_App__c/fields/Pending_ETA_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_ETA_Date__c</fullName>
    <inlineHelpText>If this app is pending, please enter the date that you expect the information to be available.</inlineHelpText>
    <label>Pending ETA Date</label>
    <type>Date</type>
</CustomField>