Custom--app/main/default/objects/Tenant_App__c/fields/Pet_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Pet_Deposit__c</fullName>
    <label>Pet Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>