Custom--app/main/default/objects/Tenant_App__c/fields/Pet_Deposit_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Pet_Deposit_Rec_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pet Deposit Rec'd</label>
    <type>Checkbox</type>
</CustomField>