Custom--app/main/default/objects/Tenant_App__c/fields/Pet_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Pet_Fee_Total__c</fullName>
    <label>Pet Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>