Custom--app/main/default/objects/Tenant_App__c/fields/Pets__c.field-meta.xml
<CustomField>
    <fullName>Pets__c</fullName>
    <label># Pets</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>