Custom--app/main/default/objects/Tenant_App__c/fields/PHA__c.field-meta.xml
<CustomField>
    <fullName>PHA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is a look-up field that will link to a company record representing your local Public Housing Authority.  If you are not finding the PHA in the look-up, you can go to the Companies tab and a new record.</inlineHelpText>
    <label>Public Housing Authority (PHA)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Tracking</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>