Custom--app/main/default/objects/Tenant_App__c/fields/PHA_Case_Worker__c.field-meta.xml
<CustomField>
    <fullName>PHA_Case_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PHA Case Worker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Application Tracking</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>